--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,10 @@
 
 # Exemple de variables d'environnement pour une connexion à une base de données MongoDB:
 MONGO_URI=""
+
+# Serveur
+PORT = 
+# JWT
+JWT_SECRET_KEY = 
+
+JWT_EXPIRES_IN = 
