--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,31 @@
 # Ignore node_modules
-/node_modules
+node_modules/
+**/node_modules/
 
 # Ignore logs and log files
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pids
-*.log
-log
+**/pids/
+**/*.log
+**/log/
 
 # Ignore runtime data files
-.pyc
 *.pyc
+**/*.pyc
 .DS_Store
-.__pycache__
+**/.DS_Store
+__pycache__/
+**/__pycache__/
 
 # Ignore bundled artifacts
-/dist
-build
-public
+dist/
+**/dist/
+build/
+**/build/
+public/
+**/public/
 
 # Ignore OS files
 .DS_Store
@@ -36,7 +42,8 @@ Thumbs.db
 *.swn
 *.vs
 *.vso
-.vs
+.vs/
+**/.vs/
 
 # Ignore other files
 .env
@@ -47,3 +54,5 @@ Thumbs.db
 .env.development
 .env.test
 .env.production
+**/.env
+**/.env.*
